updating bio, work

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -147,7 +147,7 @@ a:focus {
     padding: 100px 0;
     text-align: center;
     color: #fff;
-    background: url(../img/intro-bg.png) no-repeat bottom center scroll;
+    background: url(../img/intro-bg.jpg) no-repeat bottom center scroll;
     background-color: #000;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -278,7 +278,7 @@ a:focus {
     margin-bottom: 25px;
 }
 
-#about {
+.about {
     font-size: 15px;
     padding-left: 40px;
     padding-right: 40px;
@@ -399,5 +399,4 @@ body {
 .project-links {
     color: white;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-
 }
