--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -8,7 +8,7 @@ body {
     width: 100%;
     height: 100%;
     font-family: 'Raleway', sans-serif;
-    font-weight: 700;
+    font-weight: 400;
     color: #537189;
     background-color: white;
 }
@@ -418,4 +418,8 @@ body {
         margin-top: 30px;
         margin-bottom: 30px;
     }
+}
+
+.company-link {
+    font-weight: 700;
 }
