--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -7,7 +7,7 @@
 body {
     width: 100%;
     height: 100%;
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     font-weight: 400;
     color: #537189;
     background-color: white;
@@ -26,7 +26,7 @@ h5,
 h6 {
     margin: 0 0 25px 0;
     text-transform: uppercase;
-    font-family: Montserrat,'Helvetica Neue',Helvetica,Arial,sans-serif;
+    font-family: 'Philosopher', sans-serif;
     font-weight: 700;
     letter-spacing: 1px;
 }
@@ -54,20 +54,15 @@ a {
 
 a:hover,
 a:focus {
-    text-decoration: none;
-    color: #6d8295;
-}
-
-.light {
-    font-weight: 400;
+    color: #B6D6E8;
 }
 
 .navbar-custom {
     margin-bottom: 0;
     border-bottom: 1px solid rgba(255,255,255,.3);
+    background: rgba(182, 214, 232, 0.95);
     text-transform: uppercase;
-    font-family: Montserrat,'Helvetica Neue',Helvetica,Arial,sans-serif;
-    background-color: #6d8295;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .navbar-custom .navbar-brand {
@@ -90,7 +85,7 @@ a:focus {
 }
 
 .navbar-custom a {
-    color: #fff;
+    color: #434343;
 }
 
 .navbar-custom .nav li a {
@@ -128,7 +123,6 @@ a:focus {
         padding: 20px 0;
         border-bottom: 0;
         letter-spacing: 1px;
-        background: 0 0;
         -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
         -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
         transition: background .5s ease-in-out,padding .5s ease-in-out;
@@ -137,7 +131,7 @@ a:focus {
     .navbar-custom.top-nav-collapse {
         padding: 0;
         border-bottom: 1px solid rgba(255,255,255,.3);
-        background: #6d8295;
+        background: rgba(182, 214, 232, 1);
     }
 }
 
@@ -148,7 +142,7 @@ a:focus {
     padding: 100px 0;
     text-align: center;
     color: #fff;
-    background: url(../img/intro-bg.jpg) no-repeat bottom center scroll;
+    background: url(../img/hero.png) no-repeat bottom center scroll;
     background-color: #000;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -163,10 +157,12 @@ a:focus {
 
 .intro .intro-body .brand-heading {
     font-size: 40px;
+    color: #b56524;
 }
 
 .intro .intro-body .intro-text {
     font-size: 18px;
+    color: #434343;
 }
 
 @media(min-width:768px) {
@@ -180,7 +176,7 @@ a:focus {
     }
 
     .intro .intro-body .intro-text {
-        font-size: 26px;
+        font-size: 20px;
     }
 }
 
@@ -189,10 +185,10 @@ a:focus {
     height: 70px;
     margin-top: 15px;
     padding: 7px 16px;
-    border: 2px solid #fff;
+    border: 2px solid #434343;
     border-radius: 100%!important;
     font-size: 40px;
-    color: #fff;
+    color: #434343;;
     background: 0 0;
     -webkit-transition: background .3s ease-in-out;
     -moz-transition: background .3s ease-in-out;
@@ -202,8 +198,6 @@ a:focus {
 .btn-circle:hover,
 .btn-circle:focus {
     outline: 0;
-    color: #fff;
-    background: rgba(255,255,255,.1);
 }
 
 .btn-circle i.animated {
@@ -266,7 +260,7 @@ a:focus {
    /* width: 100%;
     padding: 50px 0;*/
     color: #fff;
-    background-color: #404040;
+    background-color:#434343;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -277,11 +271,13 @@ a:focus {
     height: 200px;
     width: 300px;
     margin-bottom: 25px;
+    border-radius: 4px;
+    border: 2px solid #B6D6E8;
 }
 
 .about {
     font-size: 15px;
-    max-width: 600px;
+    max-width: 700px;
     margin: 20px auto;
 }
 
@@ -370,12 +366,6 @@ body {
     transition: all .4s ease;
 }
 
-.project-img:hover {
-   filter: grayscale(100%);
-    -webkit-filter: grayscale(100%);
-    filter: gray;
-}
-
 .project-row {
     margin-top: 100px;
     margin-bottom: 100px;
@@ -400,7 +390,7 @@ body {
 }
 
 .content-link:hover {
-    color: #337ab7;
+    color: #B6D6E8;
     text-decoration: underline;
 }
 
