--- a/less/variables.less
+++ b/less/variables.less
@@ -1,3 +1,16 @@
-// Variables
+//Color Palette
+@white: #ffffff;
+@black: #434343;
+@gray: #efeeea;
+@dark-blue: #537189;
+@light-blue: #b6d6e8;
+@orange: #b56524;
 
-@primary: #42DCA3;
+//Fonts
+@open-sans: 'Open Sans', sans-serif;
+@philosopher:'Philosopher', sans-serif;
+
+// Breakpoints
+@resolution-small: 540px;
+@resolution-medium: 768px;
+@resolution-large: 992px;
