--- a/less/grayscale-theme.less
+++ b/less/grayscale-theme.less
@@ -1,16 +1,16 @@
 @import 'variables.less';
 
 body {
-    width: 100%;
-    height: 100%;
-    font-family: @open-sans;
-    font-size: 16px;
-    color: @black;
+  width: 100%;
+  height: 100%;
+  font-family: @open-sans;
+  font-size: 16px;
+  color: @black;
 }
 
 html {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 h1,
@@ -19,266 +19,266 @@ h3,
 h4,
 h5,
 h6 {
-    margin: 0 0 16px 0;
-    font-family: @philosopher;
-    letter-spacing: 1px;
+  margin: 0 0 16px 0;
+  font-family: @philosopher;
+  letter-spacing: 1px;
 }
 
 p {
-    margin: 0 0 16px;
-    line-height: 1.6;
+  margin: 0 0 16px;
+  line-height: 1.6;
 }
 
 a {
-    text-decoration: underline;
-    -webkit-transition: all .2s ease-in-out;
-    -moz-transition: all .2s ease-in-out;
-    transition: all .2s ease-in-out;
+  text-decoration: underline;
+  -webkit-transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
 
 .navbar-custom {
-    margin-bottom: 0;
-    background: rgba(182, 214, 232, 0.95);
-    text-transform: uppercase;
+  margin-bottom: 0;
+  background: rgba(182, 214, 232, 0.95);
+  text-transform: uppercase;
 
-    .navbar-brand { 
-        .navbar-toggle {
-            padding: 4px 6px;
-            font-size: 16px;
-            color: @dark-blue;
+  .navbar-brand {
+    .navbar-toggle {
+      padding: 4px 6px;
+      font-size: 16px;
+      color: @dark-blue;
 
-            &:focus,
-            &:active {
-                outline: 0;
-            }
-        }
+      &:focus,
+      &:active {
+        outline: 0;
+      }
     }
+  }
 
-    a {
-        color: @black;
-        text-decoration: none;
+  a {
+    color: @black;
+    text-decoration: none;
 
-        &:hover {
-            text-decoration: underline;
-        }
+    &:hover {
+      text-decoration: underline;
     }
+  }
 
-    .nav {
-        li {
-            a {
-                -webkit-transition: background .3s ease-in-out;
-                -moz-transition: background .3s ease-in-out;
-                transition: background .3s ease-in-out;
+  .nav {
+    li {
+      a {
+        -webkit-transition: background 0.3s ease-in-out;
+        -moz-transition: background 0.3s ease-in-out;
+        transition: background 0.3s ease-in-out;
 
-                &:focus,
-                &:hover,
-                &:active {
-                    outline: 0;
-                    background-color: transparent;
-                    text-decoration: underline;
-                }
-            }
-
-            &.active {
-                outline: 0;
-
-                a {
-                    background-color: rgba(255,255,255,.3);
-                }
-            }
+        &:focus,
+        &:hover,
+        &:active {
+          outline: 0;
+          background-color: transparent;
+          text-decoration: underline;
         }
-    }
+      }
 
-    @media(min-width: @resolution-medium) {
-        padding: 20px 0;
-        border-bottom: 0;
-        letter-spacing: 1px;
-        -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
-        -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
-        transition: background .5s ease-in-out,padding .5s ease-in-out;
+      &.active {
+        outline: 0;
 
-        &.top-nav-collapse {
-            padding: 0;
-            background: rgba(182, 214, 232, 1);
-            border-bottom: 1px solid rgba(255,255,255,.3);
+        a {
+          background-color: rgba(255, 255, 255, 0.3);
         }
+      }
     }
+  }
+
+  @media (min-width: @resolution-medium) {
+    padding: 20px 0;
+    border-bottom: 0;
+    letter-spacing: 1px;
+    -webkit-transition: background 0.5s ease-in-out, padding 0.5s ease-in-out;
+    -moz-transition: background 0.5s ease-in-out, padding 0.5s ease-in-out;
+    transition: background 0.5s ease-in-out, padding 0.5s ease-in-out;
+
+    &.top-nav-collapse {
+      padding: 0;
+      background: rgba(182, 214, 232, 1);
+      border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+    }
+  }
 }
 
 .intro {
-    display: table;
-    width: 100%;
-    height: auto;
-    padding: 100px 0;
-    text-align: center;
-    color: @white;
-    background: url(../img/hero.png) no-repeat bottom center scroll;
-    background-color: @black;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
+  display: table;
+  width: 100%;
+  height: auto;
+  padding: 100px 0;
+  text-align: center;
+  color: @white;
+  background: url(../img/hero.png) no-repeat bottom center scroll;
+  background-color: @black;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover;
+
+  .intro-body {
+    display: table-cell;
+    vertical-align: middle;
+
+    .brand-heading {
+      font-size: 40px;
+      color: @orange;
+    }
+
+    .intro-text {
+      font-size: 18px;
+      color: @black;
+    }
+  }
+
+  @media (min-width: @resolution-medium) {
+    height: 100%;
+    padding: 0;
 
     .intro-body {
-        display: table-cell;
-        vertical-align: middle;
+      .brand-heading {
+        font-size: 50px;
+      }
 
-        .brand-heading {
-            font-size: 40px;
-            color: @orange;
-        }
-
-        .intro-text {
-            font-size: 18px;
-            color: @black;
-        }
+      .intro-text {
+        font-size: 20px;
+      }
     }
-
-    @media(min-width: @resolution-medium) {
-        height: 100%;
-        padding: 0;
-
-        .intro-body {
-            .brand-heading {
-                font-size: 50px;
-            }
-
-            .intro-text {
-                font-size: 20px;
-            }
-        }
-    }
+  }
 }
 
 .btn-circle {
-    width: 70px;
-    height: 70px;
-    margin-top: 15px;
-    padding: 7px 16px;
-    border: 2px solid @black;
-    border-radius: 100% !important;
-    font-size: 40px;
-    color: @black;
-    background: 0 0;
-    -webkit-transition: background .3s ease-in-out;
-    -moz-transition: background .3s ease-in-out;
-    transition: background .3s ease-in-out;
+  width: 70px;
+  height: 70px;
+  margin-top: 15px;
+  padding: 7px 16px;
+  border: 2px solid @black;
+  border-radius: 100% !important;
+  font-size: 40px;
+  color: @black;
+  background: 0 0;
+  -webkit-transition: background 0.3s ease-in-out;
+  -moz-transition: background 0.3s ease-in-out;
+  transition: background 0.3s ease-in-out;
 
-    &:hover,
-    &:focus {
-        outline: 0;
-    }
+  &:hover,
+  &:focus {
+    outline: 0;
+  }
 
+  i.animated {
+    -webkit-transition-property: -webkit-transform;
+    -webkit-transition-duration: 1s;
+    -moz-transition-property: -moz-transform;
+    -moz-transition-duration: 1s;
+  }
+
+  &:hover {
     i.animated {
-        -webkit-transition-property: -webkit-transform;
-        -webkit-transition-duration: 1s;
-        -moz-transition-property: -moz-transform;
-        -moz-transition-duration: 1s;
+      -webkit-animation-name: pulse;
+      -moz-animation-name: pulse;
+      -webkit-animation-duration: 1.5s;
+      -moz-animation-duration: 1.5s;
+      -webkit-animation-iteration-count: infinite;
+      -moz-animation-iteration-count: infinite;
+      -webkit-animation-timing-function: linear;
+      -moz-animation-timing-function: linear;
     }
-
-    &:hover {
-        i.animated {
-            -webkit-animation-name: pulse;
-            -moz-animation-name: pulse;
-            -webkit-animation-duration: 1.5s;
-            -moz-animation-duration: 1.5s;
-            -webkit-animation-iteration-count: infinite;
-            -moz-animation-iteration-count: infinite;
-            -webkit-animation-timing-function: linear;
-            -moz-animation-timing-function: linear;
-        }
-    }
+  }
 }
 
-@-webkit-keyframes pulse {    
-    0 {
-        -webkit-transform: scale(1);
-        transform: scale(1);
-    }
+@-webkit-keyframes pulse {
+  0 {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
 
-    50% {
-        -webkit-transform: scale(1.2);
-        transform: scale(1.2);
-    }
+  50% {
+    -webkit-transform: scale(1.2);
+    transform: scale(1.2);
+  }
 
-    100% {
-        -webkit-transform: scale(1);
-        transform: scale(1);
-    }
+  100% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
 }
 
-@-moz-keyframes pulse {    
-    0 {
-        -moz-transform: scale(1);
-        transform: scale(1);
-    }
+@-moz-keyframes pulse {
+  0 {
+    -moz-transform: scale(1);
+    transform: scale(1);
+  }
 
-    50% {
-        -moz-transform: scale(1.2);
-        transform: scale(1.2);
-    }
+  50% {
+    -moz-transform: scale(1.2);
+    transform: scale(1.2);
+  }
 
-    100% {
-        -moz-transform: scale(1);
-        transform: scale(1);
-    }
+  100% {
+    -moz-transform: scale(1);
+    transform: scale(1);
+  }
 }
 
 .btn {
-    text-transform: uppercase;
-    font-family: @open-sans;
-    font-weight: 400;
-    -webkit-transition: all .3s ease-in-out;
-    -moz-transition: all .3s ease-in-out;
-    transition: all .3s ease-in-out;
-    border-radius: 0;
+  text-transform: uppercase;
+  font-family: @open-sans;
+  font-weight: 400;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  border-radius: 0;
 }
 
 ul.banner-social-buttons {
-    margin-top: 45px;
+  margin-top: 45px;
 
-    @media(max-width: @resolution-medium) {
-        li {
-            display: block;
-            margin-bottom: 20px;
-            padding: 0;
+  @media (max-width: @resolution-medium) {
+    li {
+      display: block;
+      margin-bottom: 20px;
+      padding: 0;
 
-            &:last-child {
-                margin-bottom: 0;
-            }
-        }
+      &:last-child {
+        margin-bottom: 0;
+      }
     }
+  }
 }
 
 footer {
-    padding: 50px 0;
+  padding: 50px 0;
 
-    p {
-        margin: 0;
-        font-size: 1.5rem;
-    }
+  p {
+    margin: 0;
+    font-size: 1.5rem;
+  }
 }
 
 ::-moz-selection {
-    text-shadow: none;
-    background: @white;
-    background: rgba(255,255,255,.2);
+  text-shadow: none;
+  background: @white;
+  background: rgba(255, 255, 255, 0.2);
 }
 
 ::selection {
-    text-shadow: none;
-    background: @white;;
-    background: rgba(255,255,255,.2);
+  text-shadow: none;
+  background: @white;
+  background: rgba(255, 255, 255, 0.2);
 }
 
 img::selection {
-    background: 0 0;
+  background: 0 0;
 }
 
 img::-moz-selection {
-    background: 0 0;
+  background: 0 0;
 }
 
 body {
-    webkit-tap-highlight-color: rgba(255,255,255,.2);
+  webkit-tap-highlight-color: rgba(255, 255, 255, 0.2);
 }
