--- a/less/styles.less
+++ b/less/styles.less
@@ -2,173 +2,171 @@
 @import './grayscale-theme.less';
 
 #me {
-    height: 200px;
-    width: 300px;
-    margin-bottom: 25px;
-    border: 2px solid @light-blue;
+  height: 200px;
+  width: 300px;
+  margin-bottom: 25px;
+  border: 2px solid @light-blue;
 }
 
 img {
-    border-radius: 4px;
+  border-radius: 4px;
 }
 
 .content-section {
-    padding-top: 50px;
+  padding-top: 50px;
 }
 
 .project-row {
-    margin-top: 30px;
-    margin-bottom: 30px;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 .project-content {
-    text-align: left;
+  text-align: left;
 }
 
 .project-link {
-    font-family: @open-sans;
-    font-size: 14px;
+  font-family: @open-sans;
+  font-size: 14px;
 }
 
 .content-section--light {
-    background-color: @gray;
+  background-color: @gray;
 
-    a {
-        color: @black;
+  a {
+    color: @black;
 
-        &:hover,
-        &:focus {
-            color: #000000;
-        }
+    &:hover,
+    &:focus {
+      color: #000000;
     }
+  }
 }
 
 .content-section--dark {
-    background-color: @black;
+  background-color: @black;
+  color: @white;
+
+  a {
     color: @white;
 
-    a {
-        color: @white;
-
-        &:hover,
-        &:focus {
-            color: @light-blue;
-        }
+    &:hover,
+    &:focus {
+      color: @light-blue;
     }
+  }
 }
 
 .content-section--about {
-    border-top: 2px solid @black;
-    padding-bottom: 50px;
+  border-top: 2px solid @black;
+  padding-bottom: 50px;
 }
 
 .card-img {
-    display: inline-block;
-    text-align: left;
-    opacity: .99;
-    overflow: hidden;
-    position: relative;
-    border-radius: 4px;
-    box-shadow: 0 0 20px 0 rgba(0,0,0,.05);
-    margin-bottom: 24px;
+  display: inline-block;
+  text-align: left;
+  opacity: 0.99;
+  overflow: hidden;
+  position: relative;
+  border-radius: 4px;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.05);
+  margin-bottom: 24px;
+
+  &:before {
+    content: '';
+    background: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 0) 0%,
+      rgba(0, 0, 0, 1) 100%
+    );
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    z-index: 2;
+    transition-property: top, opacity;
+    transition-duration: 0.3s;
+  }
+
+  img {
+    display: block;
+    max-width: 100%;
+    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
+  }
+
+  .details {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: @white;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: 0;
+    z-index: 3;
+
+    span {
+      display: block;
+      opacity: 0;
+      position: relative;
+      top: 100px;
+      transition-property: top, opacity;
+      transition-duration: 0.3s;
+      transition-delay: 0s;
+    }
+
+    .text {
+      color: @white;
+      line-height: 1;
+      font-size: 24px;
+      font-weight: 700;
+    }
+  }
+
+  &:focus,
+  &:hover {
+    &:before,
+    span {
+      opacity: 1;
+    }
 
     &:before {
-        content: '';
-        background: linear-gradient(
-            to bottom,
-            rgba(0,0,0,0) 0%,
-            rgba(0,0,0,1) 100%
-        );
-        width: 100%;
-        height: 100%;
-        opacity: 0;
-        position: absolute;
-        top: 100%;
-        left: 0;
-        z-index: 2;
-        transition-property: top, opacity;
-        transition-duration: 0.3s;
+      top: 0;
     }
 
-    img {
-        display: block;
-        max-width: 100%;
-        backface-visibility: hidden;
-        -webkit-backface-visibility: hidden;
+    span {
+      top: 0;
     }
 
-    .details {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        color: @white;
-        position: absolute;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
-        margin: 0;;
-        z-index: 3;
-        
-        span {
-            display: block;
-            opacity: 0;
-            position: relative;
-            top: 100px;
-            transition-property: top, opacity;
-            transition-duration: 0.3s;
-            transition-delay: 0s;
-        }
-        
-        .text {
-            color: @white;
-            line-height: 1;
-            font-size: 24px;
-            font-weight: 700;
-        }
+    .text {
+      transition-delay: 0.15s;
     }
-    
-    &:focus,
-    &:hover {
-        
-        &:before,
-        span {
-            opacity: 1;
-        }
-        
-        &:before {
-            top: 0;
-        }
-        
-        span {
-            top: 0;
-        }
-        
-        .text {
-            transition-delay: 0.15s;
-        }
-    }
+  }
 }
 
 .link--small {
-    font-size: 12px;
+  font-size: 12px;
 }
-  
 
 @media screen and (min-width: @resolution-medium) {
-    .project-row {
-        margin-top: 50px;
-        margin-bottom: 50px;
-    }
+  .project-row {
+    margin-top: 50px;
+    margin-bottom: 50px;
+  }
 }
 
 @media screen and (min-width: @resolution-large) {
-    .project-row {
-        margin-top: 80px;
-        margin-bottom: 80px;
-    }
+  .project-row {
+    margin-top: 80px;
+    margin-bottom: 80px;
+  }
 
-    .card-img {
-        margin-bottom: 0;
-    }
+  .card-img {
+    margin-bottom: 0;
+  }
 }
