--- a/less/styles.less
+++ b/less/styles.less
@@ -30,9 +30,16 @@ img {
   font-size: 14px;
 }
 
+.content-section--blue {
+  background-color: @light-blue;
+}
+
 .content-section--light {
   background-color: @gray;
+}
 
+.content-section--blue,
+.content-section--light {
   a {
     color: @black;
 
